--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,15 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+h2 {
+  color: red;
+}
+
+li {
+  color: cyan;
+}
+
+.container {
+  display: flex;
+}
